--- a/nanobsd/plugins/avs_pbi/pbi.conf
+++ b/nanobsd/plugins/avs_pbi/pbi.conf
@@ -3,7 +3,7 @@
 # Need to enable RTMP protocol for ports/Multimedia/ffmpeg
 #
 	# Program Name
-	PBI_PROGNAME="AirVideoServer"
+	PBI_PROGNAME="AVS"
 	
 	# Program Website
 	PBI_PROGWEB="http://http://www.inmethod.com/air-video/index.html"
@@ -23,8 +23,11 @@
 	# Additional options for make.conf
 	PBI_MAKEOPTS="PACKAGE_BUILDING=Y"
 	
-	# Ports to build before / after
-	PBI_MKPORTBEFORE="audio/lame audio/libogg audio/libvorbis converters/libiconv devel/libpthread-stubs devel/orc devel/pkg-config graphics/jpeg graphics/opencv-core graphics/openjpeg graphics/png java/javavmwrapper lang/python27 multimedia/gpac-libgpac multimedia/libtheora multimedia/mpeg4ip multimedia/rtmpdump multimedia/schroedinger multimedia/x264 multimedia/xvid multimedia/ffmpeg print/freetype2 textproc/expat2 x11-toolkits/libXaw x11-toolkits/libXmu x11-toolkits/libXt x11-toolkits/open-motif x11/inputproto x11/kbproto x11/libICE x11/libSM x11/libX11 x11/libXau x11/libXdmcp x11/libXext x11/libXi x11/libXp x11/libXpm x11/libXrender x11/libXtst x11/libxcb x11/printproto x11/recordproto x11/renderproto x11/xbitmaps x11/xextproto x11/xproto"
+# Ports to build before / after SERVIIO
+        PBI_MKPORTBEFORE="devel/libpthread-stubs devel/pkg-config shells/bash ftp/wget java/javavmwrapper multimedia/ffmpeg print/freetype2 x11-fonts/dejavu x11-fonts/fontconfig x11-toolkits/libXaw x11-toolkits/libXmu x11-toolkits/libXt x11-toolkits/open-motif x11/inputproto x11/kbproto x11/libICE x11/libSM x11/libX11 x11/libXau x11/libXdmcp x11/libXext x11/libXi x11/libXp x11/libXpm x11/libXtst x11/libxcb x11/printproto x11/recordproto x11/xbitmaps x11/xextproto x11/xproto x11/xtrans archivers/unrar archivers/unzip"
+
+	# Ports to build before / after AIRVIDEOSERVER
+#	PBI_MKPORTBEFORE="audio/lame audio/libogg audio/libvorbis converters/libiconv devel/libpthread-stubs devel/orc devel/pkg-config graphics/jpeg graphics/opencv-core graphics/openjpeg graphics/png java/javavmwrapper lang/python27 multimedia/gpac-libgpac multimedia/libtheora multimedia/mpeg4ip multimedia/rtmpdump multimedia/schroedinger multimedia/x264 multimedia/xvid multimedia/ffmpeg print/freetype2 textproc/expat2 x11-toolkits/libXaw x11-toolkits/libXmu x11-toolkits/libXt x11-toolkits/open-motif x11/inputproto x11/kbproto x11/libICE x11/libSM x11/libX11 x11/libXau x11/libXdmcp x11/libXext x11/libXi x11/libXp x11/libXpm x11/libXrender x11/libXtst x11/libxcb x11/printproto x11/recordproto x11/renderproto x11/xbitmaps x11/xextproto x11/xproto"
 
 	PBI_MKPORTAFTER="www/py-django devel/py-jsonrpclib databases/py-south databases/py-sqlite3 www/py-dojango devel/py-jsonrpclib www/py-flup net/py-oauth2"
 	
